@startuml

title __KNN's Class Diagram__\n

  package Algorithms.KNN {
    class KNNClassifier {
        + instances : Instances
        + testInstances : Instances
        + accuracy : double
        + K : int
        {static} - q : int
        ~ mapAttributeValueToCodification : TreeMap<String, BitSet>
        + KNNClassifier()
        - distance()
        + classify()
        + classifyTestSet()
        - getMostFrequentClass()
        - hamDistance()
    }
  }
  

  package Algorithms.KNN {
    class ItemComaparator {
        ~ map : TreeMap<Integer, Double>
        + ItemComaparator()
        + compare()
    }
  }
  

  package Algorithms.KNN {
    class ItemComaparator2 {
        ~ map : TreeMap<String, Integer>
        + ItemComaparator2()
        + compare()
    }
  }
  

  KNNClassifier +-down- ItemComaparator
  KNNClassifier +-down- ItemComaparator2
  ItemComaparator -up-|> Comparator
  ItemComaparator2 -up-|> Comparator


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
